# fastjsonapi

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
docs/: implementation_notes.md  jsonapi_api.md
examples/: jsonapi_example_app.py
examples/jsonapi/: create_request.json  filter.json  update_request.json
fastapi_jsonapi/: __init__.py
fastapi_jsonapi/core/: __init__.py  document.py  errors.py
fastapi_jsonapi/middleware/: __init__.py  content_negotiation.py  error_handler.py
fastapi_jsonapi/pagination/: __init__.py  base.py  standard.py
fastapi_jsonapi/permissions/: __init__.py  base.py
fastapi_jsonapi/routers/: __init__.py  base.py
fastapi_jsonapi/schemas/: __init__.py  resource.py
fastapi_jsonapi/serializers/: __init__.py  base.py
fastapi_jsonapi/sqlalchemy/: __init__.py  data_layer.py  helpers.py
fastapi_jsonapi/utils/: __init__.py  content_negotiation.py  query_params.py
fastapi_jsonapi/viewsets/: __init__.py  base.py
